fix credit-section spacing

--- a/source/sass/blocks/section-credit.scss
+++ b/source/sass/blocks/section-credit.scss
@@ -201,7 +201,7 @@
 
 .credit__specialist h3,
 .credit__partners h3 {
-  margin: 0 0 35px;
+  margin: 0 0 20px;
   padding: 0;
   font-size: 16px;
   line-height: normal;
